@@ -1,0 +1,137 @@
+<?php
+/**
+ * FluentDOM\DocumentFragment extends PHPs DOMDocumentFragment class. It adds some namespace handling.
+ *
+ * @license http://www.opensource.org/licenses/mit-license.php The MIT License
+ * @copyright Copyright (c) 2009-2014 Bastian Feder, Thomas Weinert
+ */
+
+namespace FluentDOM {
+  use FluentDOM\Exceptions\InvalidArgument;
+
+  /**
+   * FluentDOM\DocumentFrag,ent extends PHPs DOMDocumentFragment class. It adds some namespace handling and
+   * some standard interfaces for convenience.
+   *
+   * Be aware that a fragment is empty after it was appended.
+   *
+   * @property-read Document $ownerDocument
+   * @property-read Element $firstElementChild
+   * @property-read Element $lastElementChild
+   */
+  class DocumentFragment
+    extends \DOMDocumentFragment
+    implements
+      \Countable,
+      \IteratorAggregate,
+      Node\ParentNode {
+
+    use
+      Node\ParentNode\Properties,
+      Node\Xpath;
+
+    private $_namespaces = [];
+
+    /**
+     * Casting the fragment to string will return the text content of all nodes
+     *
+     * @return string
+     */
+    public function __toString() {
+      $result = '';
+      foreach ($this->childNodes as $child) {
+        $result .= (string)$child;
+      }
+      return $result;
+    }
+
+    /**
+     * @return int
+     */
+    public function count() {
+      return $this->childNodes->length;
+    }
+
+    /**
+     * @return \Iterator
+     */
+    public function getIterator() {
+      return new \ArrayIterator(iterator_to_array($this->childNodes));
+    }
+
+    /**
+     * Get/Set the namespace definition used for the fragment strings.
+     *
+     * You can use an array(prefix => $namespace, ...) or an element node
+     * to set the namespaces. If the list is empty the document, the namespces from
+     * the document object will be used.
+     *
+     * @param null|array|\Traversable|\DOMElement $namespaces
+     * @return array
+     */
+    public function namespaces($namespaces = NULL) {
+      if ($namespaces instanceof \DOMElement) {
+        $this->_namespaces = [];
+        $xpath = new Xpath($namespaces->ownerDocument);
+        foreach ($xpath('namespace::*', $namespaces) as $namespace) {
+          if ($namespace->nodeName == 'xmlns') {
+            $this->_namespaces['#default'] = $namespace->nodeValue;
+          } elseif ($namespace->localName != 'xml') {
+            $this->_namespaces[$namespace->localName] = $namespace->nodeValue;
+          }
+        }
+      } elseif ($namespaces instanceof \Traversable) {
+        $this->_namespaces = iterator_to_array($namespaces);
+      } elseif (is_array($namespaces)) {
+        $this->_namespaces = $namespaces;
+      } elseif (isset($source)) {
+        throw new \InvalidArgumentException(
+          '$namespaces needs to be a list of namespaces or an element node to fetch the namespaces from.'
+        );
+      }
+      return empty($this->_namespaces) ? $this->ownerDocument->namespaces() : $this->_namespaces;
+    }
+
+    /**
+     * Register a namespace prefix to use it in appendXml()
+     *
+     * @param $prefix
+     * @param $namespace
+     */
+    public function registerNamespace($prefix, $namespace) {
+      $this->_namespaces[empty($prefix) ? '#default' : $prefix] = $namespace;
+    }
+
+    /**
+     * Append an xml to the fragment, it can use namespace prefixes defined on the fragment object.
+     *
+     * @param string $data
+     * @param null|array|\Traversable|\DOMElement $namespaces
+     * @return bool
+     */
+    public function appendXml($data, $namespaces = NULL) {
+      $namespaces = $this->namespaces($namespaces);
+      if (empty($namespaces)) {
+        return parent::appendXml($data);
+      } else {
+        $fragment = '<fragment';
+        foreach ($namespaces as $key => $xmlns) {
+          $prefix = $key == '#default' ? '' : $key;
+          $fragment .= ' '.htmlspecialchars(empty($prefix) ? 'xmlns' : 'xmlns:'.$prefix);
+          $fragment .= '="'.htmlspecialchars($xmlns).'"';
+        }
+        $fragment .= '>'.$data.'</fragment>';
+        $source = new Document();
+        if ($source->loadXML($fragment)) {
+          foreach ($source->documentElement->childNodes as $child) {
+            $this->appendChild($this->ownerDocument->importNode($child, TRUE));
+          }
+          return TRUE;
+        } else {
+          return FALSE;
+        }
+      }
+    }
+  }
+}
+
